--- a/css/main.css
+++ b/css/main.css
@@ -122,14 +122,14 @@ img {
 
 .navbar-custom .nav li a {
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 28px;
   letter-spacing: 1.2px;
 }
 
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
-  color: #404040;
+  color: #ffffff;
 }
 
 .navbar-custom .navbar-brand:hover,
