--- a/css/main.css
+++ b/css/main.css
@@ -121,9 +121,9 @@ img {
 }
 
 .navbar-custom .nav li a {
-  text-transform: uppercase;
-  font-size: 22px;
-  letter-spacing: 1.2px;
+  text-transform: capitalize;
+  font-size: 25px;
+  letter-spacing: 1px;
 }
 
 .navbar-custom .navbar-brand,
