--- a/css/main.css
+++ b/css/main.css
@@ -121,9 +121,9 @@ img {
 }
 
 .navbar-custom .nav li a {
-  text-transform: capitalize;
+  text-transform: uppercase;
   font-size: 25px;
-  letter-spacing: 1px;
+  letter-spacing: 1.2px;
 }
 
 .navbar-custom .navbar-brand,
@@ -445,7 +445,7 @@ footer .theme-by {
 /* --- Post and page headers --- */
 
 .intro-header {
-  margin: 80px 0 20px;
+  margin: 180px 0 120px;
   position: relative;
 }
 .intro-header.big-img {
@@ -516,7 +516,7 @@ footer .theme-by {
   background: rgba(30, 30, 30, 0.6);
   position: absolute;
   padding: 5px 10px;
-  font-size: 11px;
+  font-size: 18px;
   color: #EEE;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   right: 0;
@@ -541,7 +541,7 @@ footer .theme-by {
     font-size: 50px;
   }
   .intro-header.big-img .img-desc {
-    font-size: 14px;
+    font-size: 18px;
   }
 }
 
