--- a/css/main.css
+++ b/css/main.css
@@ -107,9 +107,9 @@ img {
 
 /* --- Site title --- */
 .site-title {
-    font-size: 42px;
-    font-weight: 300;
-    line-height: 54px;
+    font-size: large;
+    font-weight: lighter;
+    line-height: normal;
     letter-spacing: 1.2px;
     margin-bottom: 0;
     float: left;
