--- a/css/main.css
+++ b/css/main.css
@@ -253,7 +253,7 @@ img {
   display: block;
   padding: 20px;
   padding-left: 30px;
-  background: #f5f5f5;
+  background: #808080;
   text-decoration: none !important;
   border-width: 0 1px 1px 1px;
   font-weight: normal;
