--- a/css/main.css
+++ b/css/main.css
@@ -107,18 +107,24 @@ img {
 
 /* --- Site title --- */
 .site-title {
-    font-size: large;
-    font-weight: lighter;
-    line-height: normal;
-    letter-spacing: 1.2px;
-    margin-bottom: 0;
-    float: left;
-
+         font-family: "proxima-nova";
+         font-size: 25px;
+         line-height: 1.25em;
+         text-transform: none;
+         margin-top: 30px !important 
     &,
     &:visited {
         color: #FFFFFF;
     }
 }
+
+/* #font-size: large;
+#font-weight: lighter;
+#line-height: normal;
+#letter-spacing: 1.2px;
+#margin-bottom: 0;
+#float: left; */
+
 
 /* --- Navbar --- */
 
