--- a/css/main.css
+++ b/css/main.css
@@ -105,6 +105,23 @@ img {
   }
 }
 
+/* --- Site title style --- */
+
+<style>
+     #page-title {
+         font-family: "proxima-nova";
+         font-size: 25px;
+         line-height: 1.25em;
+         text-transform: none;
+         margin-top: 30px !important
+     }
+     
+     
+     body.banner-alignment-right #banner-area {
+         text-align: center
+     }
+ </style>
+
 /* --- Site title --- */
 .site-title {
          font-family: "proxima-nova";
