--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,7 @@ img {
 /* --- Site title style --- */
 
 <style>
-     #page-title {
+     #site-title {
          font-family: "proxima-nova";
          font-size: 25px;
          line-height: 1.25em;
