--- a/css/main.css
+++ b/css/main.css
@@ -133,6 +133,7 @@ img {
          margin-top: 0; 
          margin-bottom: 0;
          float: left;
+          @include relative-font-size(1.25);
     &,
     &:visited {
         color: #FFFFFF;
