--- a/css/main.css
+++ b/css/main.css
@@ -105,35 +105,17 @@ img {
   }
 }
 
-/* --- Site title style --- */
-
-<style>
-     #site-title {
-         font-family: "proxima-nova";
-         font-size: 25px;
-         line-height: 1.25em;
-         text-transform: none;
-         margin-top: 30px !important
-     }
-     
-     
-     body.banner-alignment-right #banner-area {
-         text-align: center
-     }
- </style>
-
 /* --- Site title --- */
 .site-title {
-         font-family: "proxima-nova";
-         font-size: 40px;
-         font-weight: lighter;
+         font-size: 40px !important;
+         font-weight: lighter !important;
          line-height: 1.25em;
          text-transform: none;
-         letter-spacing: 1.2px;
+         letter-spacing: 1.5px;
          margin-top: 0; 
          margin-bottom: 0;
          float: left;
-          @include relative-font-size(1.25);
+          @include relative-font-size(2);
     &,
     &:visited {
         color: #FFFFFF;
