--- a/css/main.css
+++ b/css/main.css
@@ -148,12 +148,12 @@ img {
 .navbar-custom .nav li a {
   text-transform: uppercase;
   font-size: 18px;
-  letter-spacing: 1.2px;
+  letter-spacing: 1px;
 }
 
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
-  font-weight: 800;
+  font-weight: 400;
   color: #ffffff;
 }
 
@@ -177,7 +177,7 @@ img {
   transition: height .5s ease-in-out;
 }
 .navbar-custom.top-nav-short .navbar-brand-logo {
-  padding-top: 20px;
+  padding-top: 20%;
 }
 .navbar-custom.top-nav-short .navbar-brand-logo img {
   height: 20px;
