--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ img {
 .navbar-custom .avatar-container  .avatar-img {
   width: 50%;
   border-radius: -10%;
-  display: block;
+  display: none;
 }
 
 .navbar-custom.top-nav-short .avatar-container{
