--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,3 +7,5 @@ layout: base
 <div role="main" class="container">
   {{ content }}
 </div>
+
+<link rel="icon" type="image/x-icon" href="https://jagannathan-lab.github.io/favicon.png">
