--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,4 +8,4 @@ layout: base
   {{ content }}
 </div>
 
-<link rel="icon" type="image/x-icon" href="https://github.com/jagannathan-lab/jagannathan-lab.github.io/img/favicon.png">
+<link rel="icon" type="image/png" href="https://github.com/jagannathan-lab/jagannathan-lab.github.io/img/favicon.png">
